change start command

--- a/templates/default/config/settings.json.erb
+++ b/templates/default/config/settings.json.erb
@@ -2,12 +2,12 @@
     "settings": {
         "serverHostName":     "<%= @server_host_name %>",
         "serverPortNumber":    <%= @server_port_number %>,
-        "reloadPort":          <%= @reload_port %>9001,
+        "reloadPort":          <%= @reload_port %>,
         "siteTitle":          "<%= @site_title %>",
         "siteName":           "<%= @site_name %>",
         "mongoHostName" :     "<%= @mongo_host_name %>",
         "mongoPortNumber":    "<%= @mongo_port_number %>",
         "refreshStructure":    <%= @refresh_structure %>,
-        "mongoCollectionName": <%= @mongo_collection_name %>"
+        "mongoCollectionName": "<%= @mongo_collection_name %>"
     }
 } 
